--- a/src/app/components/LandingPageHeader.css
+++ b/src/app/components/LandingPageHeader.css
@@ -1,10 +1,8 @@
-.App-header {
+.header {
+    height: 60px;
     background-color: black;
-    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
+    justify-content: space-between;
+    padding: 0 15px;
+}
