--- a/src/app/components/LandingPageHeader.css
+++ b/src/app/components/LandingPageHeader.css
@@ -4,5 +4,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 15px;
+    padding: 0 var(--app-block-padding);
+}
+
+.menu ul {
+    list-style: none;
+    display: flex;
+    gap: 30px;
+}
+
+.menu ul li a {
+    color: #FFFFFF;
+    text-decoration: none;
+    font-weight: 500;
+    padding: 5px 5px;
+}
+
+.menu ul li.active a {
+    color: #D9DADC;
 }
