--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.btn, .btn-outline {
   background-color: black;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  border: none;
+  padding: 16px 35px;
+  border-radius: 500px;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: Helvetica;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-outline {
+  background-color: transparent;
+  border: 1px solid white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width:400px) {
+  .btn, .btn-outline {
+      padding: 10px 20px;
+      text-wrap: nowrap;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width:400px) {
+  .menu ul {
+      display: none;
   }
 }
