--- a/src/app/components/Header/LandingPageHeader.css
+++ b/src/app/components/Header/LandingPageHeader.css
@@ -14,10 +14,18 @@
 }
 
 .menu ul li a {
+    font-size: 15px;
     color: #FFFFFF;
     text-decoration: none;
     font-weight: 500;
     padding: 5px 5px;
+    text-wrap: nowrap;
+}
+
+@media (max-width:500px) {
+    .menu ul {
+        display: none;
+    }
 }
 
 .menu ul li.active a {
