--- a/src/app/App.css
+++ b/src/app/App.css
@@ -2,7 +2,7 @@
   background: black;
 }
 
-.btn, .btn-outline, .btn-secondary {
+.btn, .btn-outline, .btn-secondary, .facebook-login, .apple-login, .google-login {
   background-color: black;
   color: white;
   border: none;
@@ -15,14 +15,28 @@
   text-transform: uppercase;
 }
 
+.facebook-login, .apple-login, .google-login {
+  background-color: #1877F2;
+  color: white;
+  padding: 93.64px, 12px;
+}
+
 .btn-secondary {
-  background-color: #ccc;
-  border: 1px solid #ccc;
+  background-color: #1ED760;
+  color: black;
+  letter-spacing: 1.5px;
+  border: 1px solid white;
 }
 
 .btn-outline {
   background-color: transparent;
   border: 1px solid white;
+}
+
+.btn-outline2 {
+  background-color: transparent;
+  color: #878787;
+  border: 1px solid #6A6A6A;
 }
 
 @media (max-width:500px) {
