--- a/src/app/components/Pricing/style.module.css
+++ b/src/app/components/Pricing/style.module.css
@@ -1,7 +1,17 @@
-.card {
+.section {
+    background-color: #EFEFEF;
+    padding: 5%;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card, .discount {
     background-color:  white;
     width: 269px;
-    padding: 10px;
+    max-width: 269px;
+    padding: 10px 0;
     box-shadow: 0px 0px 8px #ccc;
     border-radius: 10px;
     color: black;
@@ -31,14 +41,92 @@
 }
 
 .header {
-    padding: 0px 10px;
+    margin: 0px 20px;
     border-bottom: 2px solid #ccc;
 }
 
 .content {
-    border-bottom: 2px solid #ccc;
+    padding: 10px;
+    padding-bottom: 0;
+    box-shadow: -8px 10px 12px #ddd;
+}
+
+.content ul {
+    margin: 0;
+    padding: 0 22px;
+    height: 160px;
+    list-style-image: url(../../assets/icons/check-mark.svg);
+}
+
+.content ul li {
+    font-size: 16px;
+    padding: 5px 10px;
+    position: relative;
+}
+
+.content ul li p {
+    margin: 0;
+    margin-top: -4px;
+    position: absolute;
+}
+
+.content .button {
+    width: 100%;
+    display: block;
+    margin-top: 40px;
 }
 
 .footer {
-    border-bottom: 2px solid #ccc;
+    color: #535353;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.footer a {
+    padding: 20px;
+    color: #535353;
+    font-size: 12px;
+}
+
+.flex {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.title, .description {
+    color: black;
+    font-size: 38px;
+    text-align: center;
+    margin: 0;
+}
+
+.description {
+    font-size: 16px;
+    padding: 14px 0;
+}
+
+.discount {
+    max-width: none;
+    width: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 4px 10px;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 22px;
+    font-weight: bold;
+    gap: 20px;
+}
+
+@media (max-width:768px) {
+    .discount{
+        justify-content: center;
+        display: flex;
+        text-align: center;
+        gap: 10px;
+        padding-bottom: 20px;
+    }
 }
