--- a/src/app/components/Features/style.module.css
+++ b/src/app/components/Features/style.module.css
@@ -1,4 +1,5 @@
 .features {
+    text-align: center;
     background-color: white;
     color: black;
     display: flex;
@@ -7,11 +8,17 @@
     flex-direction: column;
     padding: 25px;
     margin: 0;
+    padding: 50px var(--app-block-padding);
 }
 
 .features .title {
     font-size: 39px;
     font-weight: bold;
+    padding: 10px;
+}
+
+.features p {
+    margin: 0;
 }
 
 .features .list {
@@ -43,3 +50,4 @@
     font-size: 16px;
     font-weight: normal;
 }
+
